--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "company-website",
+  "name": "Interweb Creations",
   "version": "0.1.0",
   "homepage": "https://Nimish-Jain.github.io/Company-Website-React",
   "private": true,
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0-alpha1",
     "gh-pages": "^3.1.0",
+    "postcss": "^8.4.14",
+    "postcss-safe-parser": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
